public class Agurker extends Grønsag {
}
