public class Blomster extends Varer {
    void givVand() {
        System.out.println("blomsterne vandes");
    }

}
