package Grønhandleren;

/**
 * Developed by András Ács (acsandras@gmail.com)
 * Zealand / www.zealand.dk
 * Licensed under the MIT License
 * 09/11/2020
 */

public class Apple extends Frugt {

    String sort = "Golden Delicious";
    String type = "spiseæble";
    boolean moden = false;



}
