package Grønhandleren;

/**
 * Developed by András Ács (acsandras@gmail.com)
 * Zealand / www.zealand.dk
 * Licensed under the MIT License
 * 09/11/2020
 */

public class Grønsag extends Varer {
    void freeze() {
        System.out.println("Fryses ned.");
    }
}
