public class Tulipaner extends Blomster {
    String farve = "Rød";
    boolean blomstre = false;
}
