@startuml

title __NEDARVNINGPOLIMORFI's Class Diagram__\n

  namespace Grønhandleren {
    class Grønhandleren.Agurker {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Apple {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Blomster {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Frugt {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Grønsag {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Main {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Peas {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Tulipaner {
    }
  }
  

  namespace Grønhandleren {
    class Grønhandleren.Varer {
    }
  }
  

  Grønhandleren.Agurker -up-|> Grønhandleren.Grønsag
  Grønhandleren.Apple -up-|> Grønhandleren.Frugt
  Grønhandleren.Blomster -up-|> Grønhandleren.Varer
  Grønhandleren.Frugt -up-|> Grønhandleren.Varer
  Grønhandleren.Grønsag -up-|> Grønhandleren.Varer
  Grønhandleren.Peas -up-|> Grønhandleren.Grønsag
  Grønhandleren.Tulipaner -up-|> Grønhandleren.Blomster


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
